# TernixEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  run_all.bat  run_all.ps1
benchmarks/: bench_end_to_end.cpp  bench_simd_math.cpp  results.csv  results_e2e.csv
benchmarks/results/: latency_metrics.csv
bindings/python/: pybind11_wrapper.cpp  setup.py
docs/: RESEARCH_SYNTHESIS.md
include/ternix/: bitpack.hpp  cuda_kernels.cuh  model.hpp  mul_mat_ternary.h  simd_math.hpp  tensor.hpp  transformer.hpp
scripts/: plot_results.py  quantize.py
src/: bitpack.cpp  cuda_kernels.cu  main.cpp  model.cpp  mul_mat_ternary.cpp  simd_math.cpp  tensor.cpp  transformer.cpp
tests/: test_bitpack.cpp  test_simd_math.cpp
