cmake_minimum_required(VERSION 3.20)
project(TernixEngine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
    enable_language(CUDA)
    set(CMAKE_CUDA_STANDARD 20)
    set(TERNIX_HAS_CUDA ON)
    message(STATUS "CUDA compiler found. Enabling GPU support.")
else()
    set(TERNIX_HAS_CUDA OFF)
    message(WARNING "CUDA compiler NOT found. Building CPU-only (AVX2) version.")
endif()

find_package(OpenMP REQUIRED)

include(FetchContent)

# Google Benchmark
FetchContent_Declare(
  benchmark
  GIT_REPOSITORY https://github.com/google/benchmark.git
  GIT_TAG        v1.8.3
)
set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(benchmark)

# GoogleTest
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        v1.14.0
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Pybind11
FetchContent_Declare(
  pybind11
  GIT_REPOSITORY https://github.com/pybind/pybind11.git
  GIT_TAG        v2.11.1
)
FetchContent_MakeAvailable(pybind11)

set(TERNIX_SOURCES 
    src/mul_mat_ternary.cpp
    src/tensor.cpp
    src/simd_math.cpp
    src/bitpack.cpp
    src/model.cpp
    src/transformer.cpp
)

if(TERNIX_HAS_CUDA)
    list(APPEND TERNIX_SOURCES src/cuda_kernels.cu)
endif()

add_library(ternix_core STATIC ${TERNIX_SOURCES})
target_include_directories(ternix_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(ternix_core PUBLIC OpenMP::OpenMP_CXX)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(ternix_core PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2> $<$<COMPILE_LANGUAGE:CXX>:-O3>)
elseif(MSVC)
    target_compile_options(ternix_core PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2> $<$<COMPILE_LANGUAGE:CXX>:/O2>)
endif()

add_executable(ternix_cli src/main.cpp)
target_link_libraries(ternix_cli PRIVATE ternix_core)

# Tests
enable_testing()
add_executable(ternix_tests tests/test_bitpack.cpp tests/test_simd_math.cpp)
target_link_libraries(ternix_tests PRIVATE ternix_core gtest_main)
add_test(NAME CoreTests COMMAND ternix_tests)

# Benchmarks
add_executable(bench_simd_math benchmarks/bench_simd_math.cpp)
target_link_libraries(bench_simd_math PRIVATE ternix_core benchmark::benchmark benchmark::benchmark_main)
add_executable(bench_end_to_end benchmarks/bench_end_to_end.cpp)
target_link_libraries(bench_end_to_end PRIVATE ternix_core benchmark::benchmark benchmark::benchmark_main)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(bench_simd_math PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2> $<$<COMPILE_LANGUAGE:CXX>:-O3>)
    target_compile_options(bench_end_to_end PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2> $<$<COMPILE_LANGUAGE:CXX>:-O3>)
    target_compile_options(ternix_cli PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2> $<$<COMPILE_LANGUAGE:CXX>:-O3>)
elseif(MSVC)
    target_compile_options(bench_simd_math PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2> $<$<COMPILE_LANGUAGE:CXX>:/O2>)
    target_compile_options(bench_end_to_end PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2> $<$<COMPILE_LANGUAGE:CXX>:/O2>)
    target_compile_options(ternix_cli PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2> $<$<COMPILE_LANGUAGE:CXX>:/O2>)
endif()

# Python Bindings
pybind11_add_module(ternix_engine bindings/python/pybind11_wrapper.cpp)
target_link_libraries(ternix_engine PRIVATE ternix_core)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(ternix_engine PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-mavx2> $<$<COMPILE_LANGUAGE:CXX>:-O3>)
elseif(MSVC)
    target_compile_options(ternix_engine PRIVATE $<$<COMPILE_LANGUAGE:CXX>:/arch:AVX2> $<$<COMPILE_LANGUAGE:CXX>:/O2>)
endif()
